DarkRP 2.4.1 SVN
[ADD] Group ownable doors
[ADD] rp_startingmoney
[ADD] rp_copscanunweld
[ADD] rp_droppocketondeath toggle dropping items in pocket
[ADD] rp_allowvehicleowning Allow vehicles to be owned
[ADD] Support for multiple models. It still works the old way, don't worry
[FIX] // not working in letters
[FIX] Disabling RP names not working clientside
[FIX] Weapon checker resetting ammo
[FIX] Gunlicense buttons in F4
[FIX] Shipment issues
[FIX] Pocket glitch
[FIX] drop pickup get ammo glitch
[CHANGE] Microphone GUI layout. It's way more RP'ish now!
[REMOVE] ALL NWVars in doors, players and custom entities (shipments, druglabs etc.) DarkRP now has LESS NWVars than sandbox!
[REMOVE] VoteCopOn. It's bullshit

DarkRP 2.4.1

[ADD] rp_ironshoot, set if people have to see through the ironsights to shoot
[ADD] Falco's Prop protection (FPP), reporting for duty to replace Simple Prop Protection!
[ADD] Anti tool model crash(FPP feature)
[ADD] An easy way to make normal entities
[ADD] CPPI for FPP
[ADD] rp_dropmoneyondeath and rp_deathfee, drop money when you die. Off by default
[ADD] Demote option in F4
[ADD] People now walk slow while in ironsight mode of weapon
[ADD] DarkRP skin for the VGUI's
[ADD] Language system, it's really easy to add languages to your DarkRP now! Thanks WoRmS for the danish translation, Donkie for Swedish!
[ADD] Signature to the letters/mails
[ADD] rp_startinghealth: Set the default health
[ADD] /addspawn and /removespawn: You can now add multiple team spawns and you can remove all the teamspawns from one team.
[ADD] Visible message when a lockdown is going on
[ADD] /me command
[ADD] rp_dropweaponondeath - Enable/disable whether people drop their current weapon when they die.
[FIX] Unable to remove door tool doors
[FIX] People with the admin privilege can now see the admin menu
[FIX] Hunger resetting after sleep
[FIX] Max microwaves
[FIX] rp_enforcemodels 0 not working correctly